opam-version: "1.2"
name: "logoturtle-web"
version: "1.0"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Chris Maes <cmmaes@gmail.com>"
homepage: "https://github.com/ghuysmans/logoturtle/"
bug-reports: "https://github.com/ghuysmans/logoturtle/issues"
dev-repo: "https://github.com/ghuysmans/logoturtle/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "menhir"
  "js_of_ocaml-ppx"
]
